--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="name">Device Mockup Online</div><div id="Addbtn"><img src="icons/github.svg" width="25px" alt="Add" onClick="location.href='https://github.com/andyc15/device-mockup-online'"></div>
 	</div>
 	<div class="banner">
-		Tip Today: You can make multiple mockups at the same page.
+		Tip: You may need to cut the edge of the image when using the device with <small>Experimental</small> Tag.
 	</div>
 	<div id="list">
 		<div class="type">
@@ -54,6 +54,48 @@
 				<div class="color" style="background-color: #7E7E7E;" onclick="location.href='go/google-pixel-3-just-black.html'"></div>
 				<div class="blank"></div>
 				<div class="color" style="background-color: #F5F5F5;" onclick="location.href='go/google-pixel-3-clearly-white.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Samsung Galaxy S8
+			<div class="palette">
+				<div class="color" style="background-color: #000000;" onclick="location.href='go/samsung-galaxy-s8-midnight-black.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #B5B9BD;" onclick="location.href='go/samsung-galaxy-s8-arctic-silver.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #CCB8AA;" onclick="location.href='go/samsung-galaxy-s8-maple-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #8097BE;" onclick="location.href='go/samsung-galaxy-s8-coral-blue.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #8B87A2;" onclick="location.href='go/samsung-galaxy-s8-orchid-gray.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Samsung Galaxy S20 <small>Experimental</small>
+			<div class="palette">
+				<div class="color" style="background-color: #68696B;" onclick="location.href='go/samsung-galaxy-s20-cosmic-gray.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #C6E7FA;" onclick="location.href='go/samsung-galaxy-s20-cloud-blue.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #EFC5CF;" onclick="location.href='go/samsung-galaxy-s20-cloud-pink.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Samsung Galaxy S20+ <small>Experimental</small>
+			<div class="palette">
+				<div class="color" style="background-color: #0A0907;" onclick="location.href='go/samsung-galaxy-s20+-cosmic-black.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #68696B;" onclick="location.href='go/samsung-galaxy-s20+-cosmic-gray.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #C6E7FA;" onclick="location.href='go/samsung-galaxy-s20+-cloud-blue.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Samsung Galaxy S20 Ultra <small>Experimental</small>
+			<div class="palette">
+				<div class="color" style="background-color: #0A0907;" onclick="location.href='go/samsung-galaxy-s20-ultra-cosmic-black.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #68696B;" onclick="location.href='go/samsung-galaxy-s20-ultra-cosmic-gray.html'"></div>
 			</div>
 		</div>
 		<div class="type">
