--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 				<div class="color" style="background-color: #FBD7BD;" onclick="location.href='go/apple-iphone-11-pro-gold.html'"></div>
 			</div>
 		</div>
+		<div class="device" onclick="location.href='go/google-nexus-4.html'">
+			Google Nexus 4
+		</div>
+		<div class="device" onclick="location.href='go/google-nexus-5x.html'">
+			Google Nexus 5X
+		</div>
+		<div class="device" onclick="location.href='go/google-nexus-6p.html'">
+			Google Nexus 6P
+		</div>
+		<div class="device">
+			Google Pixel
+			<div class="palette">
+				<div class="color" style="background-color: #191918;" onclick="location.href='go/google-pixel-3-not-pink.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #172B79;" onclick="location.href='go/google-pixel-3-just-black.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #AAAAAA;" onclick="location.href='go/google-pixel-3-clearly-white.html'"></div>
+			</div>
+		</div>
 		<div class="device">
 			Google Pixel 3
 			<div class="palette">
