--- a/index.html
+++ b/index.html
@@ -136,11 +136,8 @@
 		<div class="device" onclick="location.href='go/apple-ipad-pro-11-space-gray-portrait.html'">
 			Apple iPad Pro 11 Space Gray Portrait
 		</div>
-		<div class="device">
+		<div class="device" onclick="location.href='go/microsoft-surface-pro-4.html'">
 			Microsoft Surface Pro 4
-			<div class="palette">
-				<div class="color" style="background-color: #EDEDED;" onclick="location.href='go/microsoft-surface-pro-4.html'"></div>
-			</div>
 		</div>
 		<div class="type">
 			<div class="icon">
@@ -151,10 +148,17 @@
 			</div>
 		</div>
 		<div class="device">
-			Microsoft Surface Book
+			Apple MacBook Air
 			<div class="palette">
-				<div class="color" style="background-color: #EDEDED;" onclick="location.href='go/microsoft-surface-book.html'"></div>
+				<div class="color" style="background-color: #B2B6B9;" onclick="location.href='go/apple-macBook-air-space-gray.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #EFE0D3;" onclick="location.href='go/apple-macBook-air-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #E0E2E1;" onclick="location.href='go/apple-macBook-air-silver.html'"></div>
 			</div>
+		</div>
+		<div class="device" onclick="location.href='go/microsoft-surface-book.html'">
+			Microsoft Surface Book
 		</div>
 		<div class="type">
 			<div class="icon">
