--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<div id="name">Device Mockup Online</div><div id="Addbtn"><img src="icons/github.svg" width="25px" alt="Add" onClick="location.href='https://github.com/andyc15/device-mockup-online'"></div>
 	</div>
 	<div class="banner">
-		Tip: You may need to cut the edge of the image when using the device with <small>Experimental</small> Tag.
+		Tip: You may need to cut the edge of the image when using the device with <small>Experimental</small> Tag.<br><br>
+		<a href="https://facebook.design/devices" target="_blank" style="color: #30dd81;text-decoration: underline;"><small>Download All Device Mockup From FaceBook Design</small></a>
 	</div>
 	<div id="list">
 		<div class="type">
@@ -25,6 +26,29 @@
 			</div>
 		</div>
 		<div class="device">
+			Apple iPhone 5C
+			<div class="palette">
+				<div class="color" style="background-color: #A6F776;" onclick="location.href='go/apple-iphone-5c-green.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #F9F9F9;" onclick="location.href='go/apple-iphone-5c-white.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #73D2FE;" onclick="location.href='go/apple-iphone-5c-blue.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #FF8486;" onclick="location.href='go/apple-iphone-5c-red.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #FFF38B;" onclick="location.href='go/apple-iphone-5c-yellow.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Apple iPhone 5S
+			<div class="palette">
+				<div class="color" style="background-color: #a3a2a7;" onclick="location.href='go/apple-iphone-5s-space-gray.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #e7e9e8;" onclick="location.href='go/apple-iphone-5s-silver.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #eee1d0;" onclick="location.href='go/apple-iphone-5s-gold.html'"></div>
+			</div>
+		</div><div class="device">
 			Apple iPhone 8
 			<div class="palette">
 				<div class="color" style="background-color: #3B3B3D;" onclick="location.href='go/apple-iphone-8-space-gray.html'"></div>
