--- a/index.html
+++ b/index.html
@@ -48,7 +48,32 @@
 				<div class="blank"></div>
 				<div class="color" style="background-color: #eee1d0;" onclick="location.href='go/apple-iphone-5s-gold.html'"></div>
 			</div>
-		</div><div class="device">
+		</div>
+		<div class="device">
+			Apple iPhone 6S
+			<div class="palette">
+				<div class="color" style="background-color: #edc5bf;" onclick="location.href='go/apple-iphone-6s-rose-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #f2d9c2;" onclick="location.href='go/apple-iphone-6s-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #e2e3e4;" onclick="location.href='go/apple-iphone-6s-silver.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #909196;" onclick="location.href='go/apple-iphone-6s-space-gray.html'"></div>
+			</div>
+		</div>
+		<div class="device">
+			Apple iPhone 6S Plus
+			<div class="palette">
+				<div class="color" style="background-color: #edc5bf;" onclick="location.href='go/apple-iphone-6s-plus-rose-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #f2d9c2;" onclick="location.href='go/apple-iphone-6s-plus-gold.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #e2e3e4;" onclick="location.href='go/apple-iphone-6s-plus-silver.html'"></div>
+				<div class="blank"></div>
+				<div class="color" style="background-color: #909196;" onclick="location.href='go/apple-iphone-6s-plus-space-gray.html'"></div>
+			</div>
+		</div>
+		<div class="device">
 			Apple iPhone 8
 			<div class="palette">
 				<div class="color" style="background-color: #3B3B3D;" onclick="location.href='go/apple-iphone-8-space-gray.html'"></div>
@@ -106,11 +131,11 @@
 				<div class="blank"></div>
 				<div class="color" style="background-color: #B5B9BD;" onclick="location.href='go/samsung-galaxy-s8-arctic-silver.html'"></div>
 				<div class="blank"></div>
-				<div class="color" style="background-color: #CCB8AA;" onclick="location.href='go/samsung-galaxy-s8-maple-gold.html'"></div>
+				<div class="color" style="background-color: #9e8a73;" onclick="location.href='go/samsung-galaxy-s8-maple-gold.html'"></div>
 				<div class="blank"></div>
-				<div class="color" style="background-color: #8097BE;" onclick="location.href='go/samsung-galaxy-s8-coral-blue.html'"></div>
+				<div class="color" style="background-color: #698ac4;" onclick="location.href='go/samsung-galaxy-s8-coral-blue.html'"></div>
 				<div class="blank"></div>
-				<div class="color" style="background-color: #8B87A2;" onclick="location.href='go/samsung-galaxy-s8-orchid-gray.html'"></div>
+				<div class="color" style="background-color: #61506a;" onclick="location.href='go/samsung-galaxy-s8-orchid-gray.html'"></div>
 			</div>
 		</div>
 		<div class="device">
