--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
 		<div class="device" onclick="location.href='go/microsoft-surface-pro-4.html'">
 			Microsoft Surface Pro 4
 		</div>
+		<div class="device" onclick="location.href='go/google-nexus-9.html'">
+			Google Nexus 9
+		</div>
 		<div class="type">
 			<div class="icon">
 				<img src="icons/computer.svg" width="25px" alt="Phone">
