--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
 				Computer
 			</div>
 		</div>
+		<div class="device" onclick="location.href='go/apple-imac-pro.html'">
+			Apple iMac Pro
+		</div>
 		<div class="device">
 			Apple MacBook Air
 			<div class="palette">
